Fix : overlapping problem

--- a/ui/src/Components/DetailsEntry/StudentDetails/StudentInfoDetails.css
+++ b/ui/src/Components/DetailsEntry/StudentDetails/StudentInfoDetails.css
@@ -102,6 +102,10 @@
   }
   @media screen and (max-width: 450px) {
 
+    .studentDetailsUIContainer {
+        height: auto;
+    }
+
       .studentDetailsContainer .studentInputDetails input {
           width: 93%;
       }
